--- a/ss04_git_html/cv_ca_nhan.html
+++ b/ss04_git_html/cv_ca_nhan.html
@@ -7,7 +7,7 @@
 <body>
 <h1 >CV cá nhân</h1>
 <ul>
-    <li><h3><p>Họ và tên</h3> Trần Đức Anh <a href="https://github.com/Anhcoder46/A0523i1_Tran_Duc_Anh_module1.git">Github </a> </p></p></li>
+    <li><h3><p>Họ và tên</h3> Trần Đức Anh <a href="https://github.com/Anhcoder46/A0723i1_tran_duc_anh_module1">Github </a> </p></li>
     <li><h3>Địa chỉ</h3> <p>Hà Tĩnh </p></li>
     <li><h3>Số điện thoại</h3> <p>0919147214</p></li>
     <li><h3>Email</h3> <p>tranduanh045@gmail.com</p></li>
@@ -18,6 +18,5 @@
     <li><h3>Kinh nghiệm</h3> <p>Chưa có</p></li>
     <li><h3>Định hướng phát triển cá nhân</h3> <p>Lập trình web, Mobile, làm game</p></li>
 </ul>
-
 </body>
 </html>
