--- a/ss13_mang_1_2/lon_nhat_trung_binh.html
+++ b/ss13_mang_1_2/lon_nhat_trung_binh.html
@@ -19,12 +19,12 @@
             arrayMax = array[i];
         }
     }
-    for ( let i = 0; i < array.length; i++) {
+    for (let i = 0; i < array.length; i++) {
         total += array[i];
     }
     S = total / array.length;
     document.write("Phần tử có giá trị lớn nhất là: " + arrayMax + "<br>");
-    document.write("Gía trị trung bình của mảng là: " + S);
+    document.write("Giá trị trung bình của mảng là: " + S);
 </script>
 </body>
 </html>
