--- a/ss13_mang_1_2/mang_dao_nguoc.html
+++ b/ss13_mang_1_2/mang_dao_nguoc.html
@@ -6,15 +6,14 @@
 </head>
 <body>
 <script>
-    let n = +prompt("Nhập số phần tử của mang")
+    let n = +prompt("Nhập số phần tử của mảng: ");
     let arr = new Array(n);
-    let i;
     let first = 0;
     let last = arr.length - 1;
-    for (i = 0; i < arr.length; i++) {
+    for (let i = 0; i < arr.length; i++) {
         arr[i] = +prompt("Nhập phần tử Arr[" + i + "] = ");
     }
-    document.write("Mảng khởi tạo:" + arr + "<br>");
+    document.write("Mảng khởi tạo: " + arr + "<br>");
     while (first < last) {
         let b = arr[first]
         arr[first] = arr[last];
