--- a/ss13_mang_1_2/mang_giam_dan.html
+++ b/ss13_mang_1_2/mang_giam_dan.html
@@ -6,13 +6,14 @@
 </head>
 <body>
 <script>
-    let arr = new Array(10);
+    let n = +prompt("Nhập chiều dài mảng: ");
+    let arr = new Array(n);
     for (let i = 0; i < arr.length; i++) {
-        arr[i] = +prompt("Nhập phần tử Arr[" + i + "] =");
+        arr[i] = +prompt("Nhập phần tử Arr[" + i + "] = ");
     }
     document.write("Mảng ban đầu: " + arr + "<br>");
 
-    for( let i = 0; i < arr.length; i++){
+    for(let i = 0; i < arr.length; i++){
         arr.sort((a, b) => b - a);
     }
     document.write("Mảng giảm dần là: " + arr + "<br>");
