--- a/ss13_mang_1_2/mang_so_am.html
+++ b/ss13_mang_1_2/mang_so_am.html
@@ -9,15 +9,15 @@
     let n = +prompt("Nhập số phần tử của mảng: ");
     let arr = new Array(n);
     for( let i = 0; i < arr.length; i++) {
-        arr[i] = +prompt("Nhập phần tử Arr[" + i + "] =");
+        arr[i] = +prompt("Nhập phần tử Arr[" + i + "] = ");
     }
     let count = 0;
-    for(let j = 0; j < arr.length; j++){
+    for(let j = 0; j < arr.length; j++) {
         if(arr[j] < 0) {
             count++;
         }
     }
-    document.write("Mảng " + arr + " có " + count + " số âm.");
+    document.write("Mảng [" + arr + "] có " + count + " số âm.");
 </script>
 </body>
 </html>
