--- a/ss13_mang_1_2/nguyen_duong_lon_hon_10.html
+++ b/ss13_mang_1_2/nguyen_duong_lon_hon_10.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bai 1: Mang 10 phan tu</title>
+    <title>Bai 1</title>
 </head>
 <body>
 <script>
-    let arr = new Array(10);
+    let n = parseInt(prompt("Nhập chiều dài mảng: "));
+    let arr = new Array(n);
     let i;
     count = 0;
     for (i = 0; i < arr.length; i++) {
