--- a/ss13_mang_1_2/noi_mang.html
+++ b/ss13_mang_1_2/noi_mang.html
@@ -6,17 +6,18 @@
 </head>
 <body>
 <script>
-    let arrA = new Array(10);
+    let n = +prompt("Nhâp chiều dài mảng: ");
+    let arrA = new Array(n);
     for (let i = 0; i < arrA.length; i++) {
         arrA[i] = +prompt("Nhập phần tử ArrA[" + i + "] = ");
     }
     document.write("Array A: " + arrA + "<br>");
-    let arrB = new Array(10);
+    let arrB = new Array(n);
     for (let i = 0; i < arrB.length; i++) {
         arrB[i] = +prompt("Nhập phần tử ArrB[" + i + "] = ");
     }
     document.write("Array B: " + arrB + "<br>");
-    let arrC= new Array(20);
+    let arrC= new Array(n);
     arrC = arrA.concat(arrB);
     document.write("Array C: " + arrC + "<br>");
 
