--- a/ss13_mang_1_2/vi_tri_cua_mang.html
+++ b/ss13_mang_1_2/vi_tri_cua_mang.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <script>
-    let arr = new Array(10);
+    let n = +prompt("Nhập chiều dài mảng: ");
+    let arr = new Array(n);
     for (let i = 0; i < arr.length; i++) {
-        arr[i] = +prompt("Nhap phan tu Arr[" + i + "] =");
+        arr[i] = +prompt("Nhập phần tử Arr[" + i + "] = ");
     }
     document.write("Array:" + arr + "<br>");
     let V = +prompt("Nhập giá trị cần tìm kiếm: ");
@@ -22,9 +23,9 @@
         }
     }
     if (flag == true) {
-        document.write(V + "xuất hiện tại vị trí" + index);
+        document.write(V + " xuất hiện tại vị trí " + index);
     } else
-        document.write(V + "không xuất hiện trong mảng");
+        document.write(V + " không xuất hiện trong mảng");
 </script>
 </body>
 </html>
