--- a/on_tap/nguyen_am.html
+++ b/on_tap/nguyen_am.html
@@ -1,26 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Hàm kiểm tra ký tự nguyên âm</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+
 <body>
-<label for="character">Nhập 1 ký tự:</label>
-<input type="text" id="character"><br><br>
-<button onclick="checkVowel()">Kiểm tra</button>
-<p id="result"></p>
 <script>
-    function checkVowel() {
-        var character = document.getElementById('character').value;
-        // chuỗi chứa các ký tự nguyên âm
-        var vowel = "aeiouAEIOU";
-        // kiểm tra ký tự vào có phải là nguyên âm hay ko
-        if (vowel.indexOf(character) !== -1) {
-            document.getElementById('result').innerHTML = "Ký tự " + character + " là nguyên âm";
-        } else {
-            document.getElementById('result').innerHTML = "Ký tự " + character + " là phụ âm";
-        }
+    let kytu = prompt("Nhập ký tự muốn kiểm tra: ");
+    switch (kytu) {
+        case 'o':
+        case 'O':
+        case 'u':
+        case 'U':
+        case 'i':
+        case 'I':
+        case 'a':
+        case 'A':
+        case 'e':
+        case 'E':
+            document.write("Là nguyên âm.");
+            break;
+        case 'q':
+        case 'Q':
+        case 'w':
+        case 'W':
+        case 'r':
+        case 'R':
+        case 't':
+        case 'T':
+        case 'y':
+        case 'Y':
+        case 'p':
+        case 'P':
+        case 's':
+        case 'S':
+        case 'd':
+        case 'D':
+        case 'f':
+        case 'F':
+        case 'g':
+        case 'G':
+        case 'h':
+        case 'H':
+        case 'j':
+        case 'J':
+        case 'k':
+        case 'K':
+        case 'l':
+        case 'L':
+        case 'z':
+        case 'Z':
+        case 'x':
+        case 'X':
+        case 'c':
+        case 'C':
+        case 'v':
+        case 'V':
+        case 'b':
+        case 'B':
+        case 'n':
+        case 'N':
+        case 'm':
+        case 'M':
+            document.write("Là phụ âm.");
+            break;
+        default:
+            document.write("Không phải là nguyên âm cũng không phải phụ âm");
     }
 </script>
 </body>
+
 </html>
