--- a/on_tap/liet_ke_so_nguyen_to_trong_mang.html
+++ b/on_tap/liet_ke_so_nguyen_to_trong_mang.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Liệt kê số nguyên tố trong ma trận</h1>
+<h1>Liệt kê số nguyên tố trong mảng</h1>
 
 <p>Nhập kích thước ma trận:</p>
 <label for="rows">Số hàng:</label>
@@ -50,11 +50,11 @@
         }
 
         if (count == 0) {
-            document.getElementById("output").innerHTML = "Không có số nguyên tố trong ma trận.";
+            document.getElementById("output").innerHTML = "Không có số nguyên tố trong mảng.";
         }
         else {
-            document.getElementById("output").innerHTML = "Các số nguyên tố trong ma trận là " + primes.join(", ") + ".<br>";
-            document.getElementById("output").innerHTML = "Số lượng số nguyên tố trong ma trận là " + count + ".";
+            document.getElementById("output").innerHTML = "Các số nguyên tố trong mảng là " + primes.join(", ") + ".<br>";
+            document.getElementById("output").innerHTML = "Số lượng số nguyên tố trong mảng là " + count + ".";
         }
     }
 </script>
