--- a/on_tap/tong_so_chan_trong_ma_tran.html
+++ b/on_tap/tong_so_chan_trong_ma_tran.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Tính tổng số chẵn trong mảng</title>
+    <title>Tính tổng số chẵn trong ma trận</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<h1>Tính tổng số chẵn trong mảng</h1>
+<h1>Tính tổng số chẵn trong ma trận</h1>
 
 <p>Nhập kích thước ma trận:</p>
 <label for="rows">Số hàng:</label>
@@ -33,7 +33,7 @@
                 }
             }
         }
-        document.getElementById("output").innerHTML = "Tổng các số chẵn trong mảng là " + sum + ".";
+        document.getElementById("output").innerHTML = "Tổng các số chẵn trong ma trận là " + sum + ".";
     }
 </script>
 
